--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,18 +4,35 @@ updates:
   - package-ecosystem: "cargo"
     directory: "/rs/mdbook-footnote"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    groups:
+      rust:
+        dependency-type: "development"
+
+  - package-ecosystem: "cargo"
+    directory: "/rs/wasm"
+    schedule:
+      interval: "daily"
+    groups:
+      rust:
+        dependency-type: "development"
 
   # Enable version updates for npm
   - package-ecosystem: "npm"
     directory: "/scss"
     schedule:
       interval: "weekly"
+    groups:
+      scss:
+        dependency-type: "development"
 
   - package-ecosystem: "npm"
     directory: "/js"
     schedule:
       interval: "weekly"
+    groups:
+      javascript:
+        dependency-type: "development"
 
   # Enable version updates for GitHub Actions
   - package-ecosystem: "github-actions"
