--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,6 +31,7 @@ jobs:
         id: cache-cargo
         uses: actions/cache@v4
         with:
+          save-always: 'true'
           path: |
             ~/.cargo/bin/
             ~/.cargo/registry/index/
