Return `dependabot` schedule to `weekly` 🛞
At any rate, the `group` setting was accomplished.

I didn't know the right answer and ended up just copying Wezterm!
Sorry about that!

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
   - package-ecosystem: "cargo"
     directory: "/rs/mdbook-footnote"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     groups:
       all:
         patterns:
@@ -13,7 +13,7 @@ updates:
   - package-ecosystem: "cargo"
     directory: "/rs/wasm"
     schedule:
-      interval: "daily"
+      interval: "weekly"
 
     groups:
       all:
