--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      all:
+      rust:
         patterns:
           - "*"
 
@@ -16,7 +16,7 @@ updates:
       interval: "weekly"
 
     groups:
-      all:
+      rust:
         patterns:
           - "*"
 
@@ -26,7 +26,7 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      all:
+      scss:
         patterns:
           - "*"
 
@@ -35,7 +35,7 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      all:
+      javascript:
         patterns:
           - "*"
 
