ci: use `M1` for `macOS`  (#87)
* ci: use `M1` for `macOS`

* Stop creating sitemap as a trial.

* I've copied the sitemap manually.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-22.04
+    runs-on: macos-14
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
@@ -92,20 +92,6 @@ jobs:
           rm book/mark.min.js
           rm -rf book/searchindex.js
           rm -rf book/FontAwesome
-
-      - name: Generate The Sitemap
-        id: sitemap
-        uses: cicirello/generate-sitemap@v1.10.0
-        with:
-          path-to-root: ./book
-          base-url-path: https://coralpink.github.io/commentary/
-          date-only: true
-
-      - name: Sitemap Stats
-        run: |
-          echo "sitemap-path = ${{ steps.sitemap.outputs.sitemap-path }}"
-          echo "url-count = ${{ steps.sitemap.outputs.url-count }}"
-          echo "excluded-count = ${{ steps.sitemap.outputs.excluded-count }}"
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
