Moving fonts to `woff` directory 🐺
Due to the removal of the `copy-fonts` parameter, font files that are not use on this site have been placed in the `fonts` directory.

Since it is tedious to remove unused files one by one,
we decided to move the use files to the `woff` directory and remove the entire `fonts` directory created by `mdBook`.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -93,6 +93,7 @@ jobs:
           rm book/mark.min.js
           rm -rf book/searchindex.js
           rm -rf book/FontAwesome
+          rm -rf book/fonts
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
