--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-book"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
 edition = "2021"
 rust-version = "1.71"
@@ -20,6 +20,9 @@ strip = "symbols"
 [dependencies]
 js-sys = "0.3"
 rust-stemmers = "1.2"
+serde = "1.0"
+serde_derive = "1.0"
+serde-wasm-bindgen = "0.6"
 wasm-bindgen = "0.2"
 
 [dependencies.web-sys]
