--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -20,8 +20,7 @@ strip = "symbols"
 [dependencies]
 js-sys = "0.3"
 rust-stemmers = "1.2"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 wasm-bindgen = "0.2"
 
