Make only one call to `create_element()` 🌙 (#93)
* Make only one call to `create_element()` 🌙

* add: Early return to avoid proceeding with an invalid state.

* Minor update to cache version 🥕

--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-book"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
 edition = "2021"
 rust-version = "1.71"
@@ -30,6 +30,7 @@ features = [
   "console",
   "Document",
   "Element",
+  "HtmlElement",
   "NodeList",
   "Window",
 ]
