try: Should I install `wasm-bindgen-cli`? 🏉

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           cargo install mdbook-admonish
           cargo install mdbook-tailor
+          cargo install wasm-bindgen-cli
           cargo install wasm-pack
           cargo install --path ./rs/mdbook-footnote
 
