--- a/book.toml
+++ b/book.toml
@@ -26,15 +26,8 @@ runnable = false
 enable = false
 
 [output.html.search]
-enable = true            # enables the search feature
 limit-results = 100      # maximum number of search results
 teaser-word-count = 20   # number of words used for a search result teaser
-use-boolean-and = true   # multiple search terms must all match
-boost-title = 2          # ranking boost factor for matches in headers
-boost-hierarchy = 1      # ranking boost factor for matches in page names
-boost-paragraph = 1      # ranking boost factor for matches in text
-expand = true            # partial words will match longer terms
-heading-split-level = 6  # link results to heading levels
 copy-js = true           # (apparently, searchindex.json will not be created unless this is enabled.)
 
 [preprocessor.admonish]
@@ -45,3 +38,16 @@ after = ["links"]
 [preprocessor.footnote]
 
 [preprocessor.tailor]
+
+
+# The following parameter settings are not available for this site.
+# It is not known if it will be possible to enable these settings in the future.
+
+#[output.html.search]
+#enable = true            # enables the search feature
+#use-boolean-and = true   # multiple search terms must all match
+#boost-title = 2          # ranking boost factor for matches in headers
+#boost-hierarchy = 1      # ranking boost factor for matches in page names
+#boost-paragraph = 1      # ranking boost factor for matches in text
+#expand = true            # partial words will match longer terms
+#heading-split-level = 6  # link results to heading levels
