Do not use the `setup-bun` cache 🌚
You should now have the latest version of `v1.1.x`.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,6 +26,7 @@ jobs:
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: "1.1.x"
+          no-cache: true
 
       - name: Cache Cargo
         id: cache-cargo
