--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -44,10 +44,12 @@ jobs:
       - name: Install Cargo
         if: steps.cache-cargo.outputs.cache-hit != 'true'
         run: |
-          cargo install mdbook-admonish
-          cargo install mdbook-tailor
-          cargo install wasm-bindgen-cli
-          cargo install wasm-pack
+          cargo install mdbook-admonish --version ^1.16
+          cargo install mdbook-tailor --version ^0.6
+
+          cargo install wasm-bindgen-cli --version ^0.2
+          cargo install wasm-pack --version ^0.12
+
           cargo install --path ./rs/mdbook-footnote
 
       - name: Build Wasm
