For some reason, a `404` error occurs, so specify the `latest` version anyway 🛻

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
-          bun-version: "1.1.x"
+          bun-version: "latest"
           no-cache: true
 
       - name: Cache Cargo
