--- a/rs/mdbook-footnote/Cargo.toml
+++ b/rs/mdbook-footnote/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdbook-footnote"
-version = "1.1.3"
+version = "1.1.4"
 authors = ["David Drysdale <dmd@lurklurk.org>", "CoralPink"]
 edition = "2021"
 rust-version = "1.74"
@@ -13,6 +13,9 @@ once_cell = "1.19"
 regex = "1.10"
 semver = "1.0"
 serde_json = "1.0"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
 
 [profile.release]
 lto = "thin"
