--- a/.github/workflows/test-rs-footnote.yml
+++ b/.github/workflows/test-rs-footnote.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: macos-14
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
+    - name: Moving directories
+      run: cd rs/mdbook-footnote
+
     - name: Run tests
       run: cargo test --verbose
