--- a/.github/workflows/test-rs-footnote.yml
+++ b/.github/workflows/test-rs-footnote.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   test_job:
-    runs-on: ubuntu-latest
+    runs-on: macos-14
     name: Testing
     steps:
       - uses: actions/checkout@v4
