I would like Lockfile to be merged `automatically` 🧜‍♂️

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -5,11 +5,12 @@
     ":automergeMinor",
     ":automergeDigest"
   ],
-	"major": {
+  "major": {
 		"dependencyDashboardApproval": true
 	},
 	"lockFileMaintenance": {
-		"enabled": true
+		"enabled": true,
+    "automerge": true
 	},
   // Temporary settings for operation checks.
 	"automergeSchedule": ["before 4am"]
