--- a/scss/package.json
+++ b/scss/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "sass": "^1.77.4"
+    "sass": "1.77.6"
   },
   "scripts": {
     "compile": "sass --no-charset --no-source-map --style=compressed",
