It doesn't work, so we try different things.

--- a/.github/workflows/test-rs.yml
+++ b/.github/workflows/test-rs.yml
@@ -2,8 +2,7 @@ name: test-rs
 
 on:
   workflow_run:
-    workflows:
-      - github-pages
+    workflows: [ "github-pages" ]
     types:
       - completed
 
