Maybe you forgot to `bun install`...

--- a/.github/workflows/test-js.yml
+++ b/.github/workflows/test-js.yml
@@ -22,6 +22,10 @@ jobs:
           bun-version: "latest"
           no-cache: true
 
+      - name: Build Js
+        run: |
+          bun install
+
       - name: Test javascript
         run: |
           bun test
