Is it better to combine build and test in one step?

--- a/.github/workflows/test-js.yml
+++ b/.github/workflows/test-js.yml
@@ -22,12 +22,8 @@ jobs:
           bun-version: "latest"
           no-cache: true
 
-      - name: Build Js
+      - name: Build and Test Js
         run: |
           cd js
           bun install
-
-      - name: Test javascript
-        run: |
           bun test
-
