Did I make a mistake in my path...?

--- a/.github/workflows/test-rs.yml
+++ b/.github/workflows/test-rs.yml
@@ -19,7 +19,7 @@ jobs:
           sparse-checkout: |
             rs
 
-      - name: Test Cargo
-        working-directory: rs
+      - name: Test Cargo (mdbook-footnote)
+        working-directory: rs/mdbook-footnote
         run: |
           cargo test --verbose
