--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -21,14 +21,14 @@ opt-level = "s"
 strip = "symbols"
 
 [dependencies]
-js-sys = "0.3.69"
+js-sys = "=0.3.69"
 macros = { path = "macros" }
-serde = { version = "1.0.204", features = ["derive"] }
-serde-wasm-bindgen = "0.6.5"
-wasm-bindgen = "0.2.92"
+serde = { version = "=1.0.204", features = ["derive"] }
+serde-wasm-bindgen = "=0.6.5"
+wasm-bindgen = "=0.2.92"
 
 [dependencies.web-sys]
-version = "0.3.69"
+version = "=0.3.69"
 features = [
   "Document",
   "Element",
