--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,26 +6,18 @@ on:
       - main
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
-  deploy:
+  set-cargo:
+    name: Set Cargo
     runs-on: macos-14
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-      - name: Checkout the repo
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
-
-      - name: Setup mdBook
-        uses: peaceiris/actions-mdbook@ee69d230fe19748b7abf22df32acaa93833fad08 # v2
-        with:
-          mdbook-version: "0.4.40"
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2
-        with:
-          bun-version: "latest"
-          no-cache: true
-
       - name: Cache Cargo
         id: cache-cargo
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
@@ -39,16 +31,27 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+  build-wasm:
+    name: Build Wasm
+    runs-on: macos-14
+    needs: set-cargo
+    steps:
       - name: Install Cargo
         if: steps.cache-cargo.outputs.cache-hit != 'true'
         run: |
-          cargo install mdbook-admonish
-          cargo install mdbook-tailor
-
           cargo install wasm-bindgen-cli
           cargo install wasm-pack
 
-          cargo install --path ./rs/mdbook-footnote
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            rs/wasm
+
+      - name: Test Cargo
+        working-directory: rs/wasm
+        run: |
+          cargo test --verbose
 
       - name: Build Wasm
         working-directory: rs/wasm
@@ -57,25 +60,112 @@ jobs:
           cp pkg/wasm_book.js ../../js
           cp pkg/wasm_book_bg.wasm ../../src
 
-      - name: Build Js
+  build-js:
+    name: Build JS
+    runs-on: macos-14
+    needs: build-wasm
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            js
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2
+        with:
+          bun-version: "latest"
+          no-cache: true
+
+      - name: Install
         working-directory: js
         run: |
+          bun install
           bun create-highlight.bun.sh
-          bun install --production
+
+      - name: Test Bun
+        working-directory: js
+        run: |
+          bun test
+
+      - name: Build
+        working-directory: js
+        run: |
           bun run build.js
           cp -r dist/. ../src/
 
-      - name: Build Scss
+  build-scss:
+    name: Build SCSS
+    runs-on: macos-14
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            scss
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2
+        with:
+          bun-version: "latest"
+          no-cache: true
+
+      - name: Build SCSS
         working-directory: scss
         run: |
           bun install --production
           bun run compile general.scss ../src/css/general.css
           bun run compile style.scss ../src/css/style.css
 
+  test-mdbook-backend:
+    name: Test mdBook Backend
+    runs-on: macos-14
+    needs: set-cargo
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            rs/mdbook-footnote
+
+      - name: Test Cargo (mdbook-footnote)
+        working-directory: rs/mdbook-footnote
+        run: |
+          cargo test --verbose
+
+  build-mdbook:
+    name: Build mdBook
+    runs-on: macos-14
+    needs: [build-wasm, build-js, build-scss, test-mdbook-backend]
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            .
+            src
+
+      - name: Setup mdBook
+        uses: peaceiris/actions-mdbook@ee69d230fe19748b7abf22df32acaa93833fad08 # v2
+        with:
+          mdbook-version: "0.4.40"
+
+      - name: Setup Backend
+        if: steps.cache-cargo.outputs.cache-hit != 'true'
+        run: |
+          cargo install mdbook-admonish
+          cargo install mdbook-tailor
+          cargo install --path ./rs/mdbook-footnote
+
       - name: Build mdBook
         run: |
           mdbook build
 
+  deploy:
+    name: Deploy
+    runs-on: macos-14
+    needs: build-mdbook
+    steps:
       - name: Remove Unneeded Files
         run: |
           rm book/ayu-highlight.css
