--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -158,6 +158,7 @@ jobs:
           sparse-checkout: |
             .
             src
+            rs/mdbook-footnote
 
       - name: Download wasm_pkg
         uses: actions/download-artifact@v4
