View all files.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -268,7 +268,7 @@ jobs:
 
       - name: List Segments
         run: |
-          ls -al book
+          ls -alR book
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e # v4
