Perhaps I was sleepwalking and removed the `id`...

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,6 +18,7 @@ jobs:
       CARGO_TERM_COLOR: always
     steps:
       - name: Cache Cargo
+        id: cache-cargo
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
         with:
           path: |
@@ -208,6 +209,7 @@ jobs:
           mdbook-version: "0.4.40"
 
       - name: Cache Cargo
+        id: cache-cargo
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
         with:
           path: |
