add: if-no-files-found
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -132,7 +132,7 @@ jobs:
         with:
           name: build-css
           path: scss/dist
-
+          if-no-files-found: error
   test-mdbook-backend:
     name: Test mdBook Backend
     runs-on: macos-14
