--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           name: wasm-book
           path: rs/wasm/pkg
+          if-no-files-found: error
 
   build-js:
     name: Build JS
@@ -103,6 +104,7 @@ jobs:
         with:
           name: build-js
           path: js/dist
+          if-no-files-found: error
 
   build-scss:
     name: Build SCSS
@@ -133,6 +135,7 @@ jobs:
           name: build-css
           path: scss/dist
           if-no-files-found: error
+
   test-mdbook-backend:
     name: Test mdBook Backend
     runs-on: macos-14
@@ -247,6 +250,7 @@ jobs:
         with:
           name: build-mdbook
           path: book
+          if-no-files-found: error
 
   deploy-mdbook:
     name: Deploy mdBook
