--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,19 +6,76 @@ on:
       - main
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  deploy:
+  build-wasm:
+    name: Build Wasm
     runs-on: macos-14
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
+    steps:
+      - name: Cache Cargo
+        id: cache-cargo
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: wasm-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Install Cargo
+        if: steps.cache-cargo.outputs.cache-hit != 'true'
+        run: |
+          cargo install wasm-bindgen-cli
+          cargo install wasm-pack
+
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            rs/wasm
+
+      - name: Test Cargo
+        working-directory: rs/wasm
+        run: |
+          cargo test --verbose
+
+      - name: Build Wasm
+        working-directory: rs/wasm
+        run: |
+          wasm-pack build --target web
+
+      - name: Upload wasm_pkg
+        uses: actions/upload-artifact@v4
+        with:
+          name: wasm-book
+          path: rs/wasm/pkg
+          if-no-files-found: error
+
+  build-js:
+    name: Build JS
+    runs-on: macos-14
+    needs: build-wasm
     steps:
       - name: Checkout the repo
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
-
-      - name: Setup mdBook
-        uses: peaceiris/actions-mdbook@ee69d230fe19748b7abf22df32acaa93833fad08 # v2
         with:
-          mdbook-version: "0.4.40"
+          sparse-checkout: |
+            js
+
+      - name: Download wasm_pkg
+        uses: actions/download-artifact@v4
+        with:
+          name: wasm-book
+          path: pkg
+
+      - name: Copy wasm_js
+        run: |
+          cp pkg/wasm_book.js js
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2
@@ -26,51 +83,145 @@ jobs:
           bun-version: "latest"
           no-cache: true
 
+      - name: Install
+        working-directory: js
+        run: |
+          bun install
+          bun create-highlight.bun.sh
+
+      - name: Test Bun
+        working-directory: js
+        run: |
+          bun test
+
+      - name: Build
+        working-directory: js
+        run: |
+          bun run build.js
+
+      - name: Upload JS
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-js
+          path: js/dist
+          if-no-files-found: error
+
+  build-scss:
+    name: Build SCSS
+    runs-on: macos-14
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            scss
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2
+        with:
+          bun-version: "latest"
+          no-cache: true
+
+      - name: Build SCSS
+        working-directory: scss
+        run: |
+          bun install --production
+          bun run compile general.scss dist/general.css
+          bun run compile style.scss dist/style.css
+
+      - name: Upload CSS
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-css
+          path: scss/dist
+          if-no-files-found: error
+
+  test-mdbook-backend:
+    name: Test mdBook Backend
+    runs-on: macos-14
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            rs/mdbook-footnote
+
       - name: Cache Cargo
-        id: cache-cargo
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
         with:
-          save-always: 'true'
           path: |
             ~/.cargo/bin/
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: build-test-backend${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Install Cargo
+      - name: Test Cargo (mdbook-footnote)
+        working-directory: rs/mdbook-footnote
+        run: |
+          cargo test --verbose
+
+  build-mdbook:
+    name: Build mdBook
+    runs-on: macos-14
+    needs: [build-wasm, build-js, build-scss, test-mdbook-backend]
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            .
+            src
+            rs/mdbook-footnote
+
+      - name: Download wasm_pkg
+        uses: actions/download-artifact@v4
+        with:
+          name: wasm-book
+          path: pkg
+
+      - name: Download JS
+        uses: actions/download-artifact@v4
+        with:
+          name: build-js
+          path: js
+
+      - name: Download CSS
+        uses: actions/download-artifact@v4
+        with:
+          name: build-css
+          path: css
+
+      - name: Copy Files
+        run: |
+          cp pkg/wasm_book_bg.wasm src
+          cp js/* src
+          cp -r css src
+
+      - name: Setup mdBook
+        uses: peaceiris/actions-mdbook@ee69d230fe19748b7abf22df32acaa93833fad08 # v2
+        with:
+          mdbook-version: "0.4.40"
+
+      - name: Cache Cargo
+        id: cache-cargo
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: backend-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Setup Backend
         if: steps.cache-cargo.outputs.cache-hit != 'true'
         run: |
           cargo install mdbook-admonish
           cargo install mdbook-tailor
-
-          cargo install wasm-bindgen-cli
-          cargo install wasm-pack
-
           cargo install --path ./rs/mdbook-footnote
-
-      - name: Build Wasm
-        working-directory: rs/wasm
-        run: |
-          wasm-pack build --target web
-          cp pkg/wasm_book.js ../../js
-          cp pkg/wasm_book_bg.wasm ../../src
-
-      - name: Build Js
-        working-directory: js
-        run: |
-          bun create-highlight.bun.sh
-          bun install --production
-          bun run build.js
-          cp -r dist/. ../src/
-
-      - name: Build Scss
-        working-directory: scss
-        run: |
-          bun install --production
-          bun run compile general.scss ../src/css/general.css
-          bun run compile style.scss ../src/css/style.css
 
       - name: Build mdBook
         run: |
@@ -94,9 +245,31 @@ jobs:
           rm -rf book/FontAwesome
           rm -rf book/fonts
 
+      - name: Upload Book
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-mdbook
+          path: book
+          if-no-files-found: error
+
+  deploy-mdbook:
+    name: Deploy mdBook
+    runs-on: macos-14
+    needs: build-mdbook
+    steps:
+      - name: Download Book
+        uses: actions/download-artifact@v4
+        with:
+          name: build-mdbook
+          path: book
+
+      - name: List Segments
+        run: |
+          ls -alR book
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e # v4
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./book
+          publish_dir: book
