I'm forgetting things again...

--- a/.github/workflows/build-mdbook.yml
+++ b/.github/workflows/build-mdbook.yml
@@ -2,6 +2,8 @@ name: Build mdBook
 
 on:
   workflow_run: [Build Script, Build SCSS, Test mdBook Backend]
+  types:
+    - completed
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
