--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,8 @@ name: Deploy
 
 on:
   workflow_run: [Build mdBook]
+  types:
+    - completed
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
