Then what about this?

--- a/.github/workflows/build-mdbook.yml
+++ b/.github/workflows/build-mdbook.yml
@@ -1,7 +1,7 @@
 name: Build mdBook
 
 on:
-  workflow_run: ["Build Script, Build SCSS, Test mdBook Backend"]
+  workflow_run: ["Build Script", "Build SCSS", "Test mdBook Backend"]
     types:
       - completed
 
