--- a/.github/workflows/build-mdbook.yml
+++ b/.github/workflows/build-mdbook.yml
@@ -2,7 +2,7 @@ name: Build mdBook
 
 on:
   workflow_run:
-    workflows: ["Build Script", "Build SCSS", "Test mdBook Backend"]
+    workflows: [Build Script, Build SCSS, Test mdBook Backend]
     types:
       - completed
 
@@ -14,7 +14,6 @@ jobs:
   build-mdbook:
     name: Build mdBook
     runs-on: macos-14
-    needs: [build-wasm, build-js, build-scss, test-mdbook-backend]
     steps:
       - name: Checkout the repo
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
