--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   workflow_run:
-    workflows: ["Build mdBook"]
+    workflows: [Build mdBook]
     types:
       - completed
 
@@ -14,7 +14,6 @@ jobs:
   deploy-mdbook:
     name: Deploy mdBook
     runs-on: macos-14
-    needs: build-mdbook
     steps:
       - name: Download Book
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
