--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -155,7 +155,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: build-test-backend${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: test-backend-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Test Cargo (mdbook-footnote)
         working-directory: rs/mdbook-footnote
