--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -45,7 +45,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - run: geckodriver --version
 
-      - name: Test Cargo
+      - name: Test Wasm
         working-directory: rs/wasm
         run: |
           wasm-pack test --headless --firefox
